--- a/assignments/assignment-3.Rmd
+++ b/assignments/assignment-3.Rmd
@@ -64,7 +64,7 @@ In addition to the visualization and accompanying narrative, write an approximat
 
 ## Submission details
 
-Submit your visualization and analysis as a single R Markdown document rendered using the `html_document` output format. If you build a Shiny app, deploy it on [shinyapps.io](http://www.shinyapps.io) and include a link to it in your submission. Include your design explanation in a separate document. Your folder in the repo should also contain a copy of the generated data file and documentation of the survey and the treatment/condition versions of your graphic.
+Submit your visualization and analysis as a single R Markdown document rendered using the `html_document` output format. If you build a Shiny app, deploy it on [shinyapps.io](http://www.shinyapps.io) and include a link to it in your submission. Include your design explanation in a separate document.
 
 Your submission is due by **1:30pm on Wednesday, May 10th**.
 
