--- a/notes/day16-notes.Rmd
+++ b/notes/day16-notes.Rmd
@@ -339,11 +339,182 @@ This will create approximately 5 tick marks. However D3 will interpret this as a
 * [Result](https://htmlpreview.github.io/?https://github.com/alignedleft/d3-book/blob/master/chapter_08/03_axes_clean.html)
 * [Result with y-axis](https://htmlpreview.github.io/?https://github.com/alignedleft/d3-book/blob/master/chapter_08/04_axes_y.html)
 
-
-
-
 # Updates, Transitions, and Motion
 
+Return to the bar chart:
+
+```javascript
+			//Width and height
+			var w = 600;
+			var h = 250;
+			
+			var dataset = [ 5, 10, 13, 19, 21, 25, 22, 18, 15, 13,
+							11, 12, 15, 20, 18, 17, 16, 18, 23, 25 ];
+			var xScale = d3.scale.ordinal()
+							.domain(d3.range(dataset.length))
+							.rangeRoundBands([0, w], 0.05);
+			var yScale = d3.scale.linear()
+							.domain([0, d3.max(dataset)])
+							.range([0, h]);
+			
+			//Create SVG element
+			var svg = d3.select("body")
+						.append("svg")
+						.attr("width", w)
+						.attr("height", h);
+			//Create bars
+			svg.selectAll("rect")
+			   .data(dataset)
+			   .enter()
+			   .append("rect")
+			   .attr("x", function(d, i) {
+			   		return xScale(i);
+			   })
+			   .attr("y", function(d) {
+			   		return h - yScale(d);
+			   })
+			   .attr("width", xScale.rangeBand())
+			   .attr("height", function(d) {
+			   		return yScale(d);
+			   })
+			   .attr("fill", function(d) {
+					return "rgb(0, 0, " + (d * 10) + ")";
+			   });
+			//Create labels
+			svg.selectAll("text")
+			   .data(dataset)
+			   .enter()
+			   .append("text")
+			   .text(function(d) {
+			   		return d;
+			   })
+			   .attr("text-anchor", "middle")
+			   .attr("x", function(d, i) {
+			   		return xScale(i) + xScale.rangeBand() / 2;
+			   })
+			   .attr("y", function(d) {
+			   		return h - yScale(d) + 14;
+			   })
+			   .attr("font-family", "sans-serif")
+			   .attr("font-size", "11px")
+			   .attr("fill", "white");
+```
+
+* [Result](https://htmlpreview.github.io/?https://github.com/alignedleft/d3-book/blob/master/chapter_09/02_bar_chart_with_scales.html)
+    * Changed the height and width of the chart
+    * Used an **ordinal scale** to handle positioning along the x-axis. Ordinal scales are a way of declaring x-coordinate positions for non-quantitiative variables and use the D3 `scale()` function to declare positions.
+    
+## Updating data
+
+Because the bar graph is scalable to different data values, we should be able to dynamically change the data and have the graph be redrawn. The basic procedure is:
+
+1. Modify the values in the dataset
+1. Rebind the values to the existing elements (overwriting the original values)
+1. Set new attribute values as needed to update the visual display
+
+Before this occurs, we need an **event** to occur that signals the change should take place **after the page loads**. This is different from R, where we can use the same basic `ggplot()` code to draw a graph with new data, but we have to rerun the script in order for the changes to take effect. This starts the road down interactivity.
+
+
+### Interaction via event listeners
+
+Add this html to the `body`:
+
+```html
+<p>Click on this text to update the chart with new data values (once).</p>
+```
+
+And this to the D3 object:
+
+```javascript
+/On click, update with new data
+d3.select("p")
+    .on("click", function() {
+
+        //New values for dataset
+        dataset = [ 11, 12, 15, 20, 18, 17, 16, 18, 23, 25,
+                    5, 10, 13, 19, 21, 25, 22, 18, 15, 13 ];
+
+        //Update all rects
+        svg.selectAll("rect")
+           .data(dataset)
+           .attr("y", function(d) {
+                return h - yScale(d);
+           })
+           .attr("height", function(d) {
+                return yScale(d);
+           });
+
+    });
+```
+
+* First select the `p` element from the body of the HTML document
+* When the `click` event occurs, we're going to do something defined by the anonymous function to come. Event listeners happen all the time in JavaScript, click events are just one type.
+    * `dataset` is overwritten
+    * All the `rect` elements in `svg` are redrawn with the new height information
+
+* [Result](https://htmlpreview.github.io/?https://github.com/alignedleft/d3-book/blob/master/chapter_09/03_updates_all_data.html)
+    * Forgot to update the text labels and fill color
+    
+    ```javascript
+    svg.selectAll("rect")
+       .data(dataset)
+       .attr("y", function(d) {
+            return h - yScale(d);
+       })
+       .attr("height", function(d) {
+             return yScale(d);
+       })
+       .attr("fill", function(d) {   // <-- Down here!
+             return "rgb(0, 0, " + (d * 10) + ")";
+       });
+    svg.selectAll("text")
+       .data(dataset)
+       .text(function(d) {
+             return d;
+       })
+       .attr("x", function(d, i) {
+             return xScale(i) + xScale.rangeBand() / 2;
+       })
+       .attr("y", function(d) {
+             return h - yScale(d) + 14;
+       });
+    ```
+* [New result](https://htmlpreview.github.io/?https://github.com/alignedleft/d3-book/blob/master/chapter_09/04_updates_all_data_fixed.html)
+
+## Transitions
+
+You may not want the change to occur instantaneously. Instead, let's smooth it out by using
+
+```javascript
+.transition()
+
+//Update all rects
+svg.selectAll("rect")
+   .data(dataset)
+   .transition()    // <-- This is new! Everything else here is unchanged.
+   .attr("y", function(d) {
+        return h - yScale(d);
+   })
+   .attr("height", function(d) {
+        return yScale(d);
+   })
+   .attr("fill", function(d) {
+        return "rgb(0, 0, " + (d * 10) + ")";
+   });
+```
+
+* [Result](https://htmlpreview.github.io/?https://github.com/alignedleft/d3-book/blob/master/chapter_09/05_transition.html)
+
+The result is a smooth transition and interpolation between the old and new version of the image. You can also control things such as the `.duration()`, or how long the transition should take. This is just added to the chain of updating the svg object. You can also change the type of motion using different `ease()` parameters:
+
+* [Linear](https://htmlpreview.github.io/?https://github.com/alignedleft/d3-book/blob/master/chapter_09/09_ease_linear.html)
+* [Circle](https://htmlpreview.github.io/?https://github.com/alignedleft/d3-book/blob/master/chapter_09/10_ease_circle.html)
+* [Elastic](https://htmlpreview.github.io/?https://github.com/alignedleft/d3-book/blob/master/chapter_09/11_ease_elastic.html)
+* [Bounce](https://htmlpreview.github.io/?https://github.com/alignedleft/d3-book/blob/master/chapter_09/12_ease_bounce.html)
+
+You can also `delay()` when the transition begins. The key thing to remember is that all these transition elements must be added to the chain before the actual modifications to the svg object are coded.
+
+There's lots more to do with transitions. See the book for more details.
 
 # Interactivity
 
