Update assignment 2 instructions

--- a/assignments/assignment-2.Rmd
+++ b/assignments/assignment-2.Rmd
@@ -29,7 +29,7 @@ Researchers at the University of Rochester have developed [an excellent guide](h
 * Setup your [Amazon MTurk account](https://www.mturk.com/mturk/welcome)
 * Setup your [Qualtrics account here](https://sscs.uchicago.edu/page/qualtrics)
     * **DO THIS EARLY**
-    * Make sure to forward the email I sent your from IRB to Social Sciences Computing Services so they will activate your account. You cannot create a Qualtrics survey until this is done.
+    * Make sure to forward the email I sent you from IRB to Social Sciences Computing Services so they will activate your account. You cannot create a Qualtrics survey until this is done.
     
 ## Working with a partner
 
@@ -47,8 +47,3 @@ Grading will be flexible. I will not grade you on whether you find significant o
 ## Submission details
 
 Submit your analysis as a single R Markdown document rendered using the `github_document` output format.^[Use `html_document` if needed to properly render your graphs.] Your folder in the repo should also contain a copy of the generated data file and documentation of the survey and the treatment/condition versions of your graphic.
-
-Your submission is due by **11:59pm on Friday, April 28th**.
-
-
-
