--- a/assignments/assignment-3.Rmd
+++ b/assignments/assignment-3.Rmd
@@ -6,7 +6,7 @@ output: github_document
 knitr::opts_chunk$set()
 ```
 
-# Assignment 3: Interactive graphics with Gapminder
+# Assignment 3: Interactive graphics with Gapminder (10 points)
 
 [Gapminder](http://www.gapminder.org/data/) compiles detailed indicators of global development. For this assignment, you should build an interactive visualization to tell a story about the data. **This requires you to develop both the visualization as well as a written narrative.**
 
@@ -67,6 +67,4 @@ In addition to the visualization and accompanying narrative, write an approximat
 Submit your visualization and analysis as a single R Markdown document rendered using the `html_document` output format. If you build a Shiny app, deploy it on [shinyapps.io](http://www.shinyapps.io) and include a link to it in your submission. Include your design explanation in a separate document.
 
 Your submission is due by **1:30pm on Wednesday, May 10th**.
-
-
 
