Add links to Github classroom to create assignment repos and fix due dates. Close #2

--- a/assignments/critique-grammar.Rmd
+++ b/assignments/critique-grammar.Rmd
@@ -62,4 +62,6 @@ In your written explanation, be sure to rigorously defend your design choices. T
 
 #### Submission details
 
-Submit your graph and written explanation as a single R Markdown document rendered using the `github_document` output format.
+[Create your assignment repo through GitHub Classrooms.](https://classroom.github.com/a/Zj8ttjOM) Submit your graph and written explanation as a single R Markdown document rendered using the `github_document` output format.
+
+Your submission is due by **11:00am on Tuesday, April 10th**.
