--- a/assignments/experiment.Rmd
+++ b/assignments/experiment.Rmd
@@ -31,9 +31,9 @@ Researchers at the University of Rochester have developed [an excellent guide](h
     * **DO THIS EARLY**
     * Make sure to forward the email I sent you from IRB to Social Sciences Computing Services so they will activate your account. You cannot create a Qualtrics survey until this is done.
     
-## Working with a partner
+## Working in a team
 
-You may work with one other student in the course if you choose. When you submit the assignment, only one student needs to open a pull request. Make sure to indicate in the pull request which students participated in the experiment and document how each of you contributed to the assignment.
+You may work with up to two other students in the course if you choose. When you create the repo for the assignment, be sure to create a team so that the other team members have read/write access to the repo.
 
 ## Grading
 
@@ -46,4 +46,6 @@ Grading will be flexible. I will not grade you on whether you find significant o
 
 ## Submission details
 
-Submit your analysis as a single R Markdown document rendered using the `github_document` output format.^[Use `html_document` if needed to properly render your graphs.] Your folder in the repo should also contain a copy of the generated data file and documentation of the survey and the treatment/condition versions of your graphic.
+[Create your assignment repo through GitHub Classrooms.](https://classroom.github.com/g/WtfroPll) Submit your analysis as a single R Markdown document rendered using the `github_document` output format.^[Use `html_document` if needed to properly render your graphs.] The repo should also contain a copy of the generated data file and documentation of the survey and the treatment/condition versions of your graphic.
+
+Your submission is due by **11:00am on Tuesday, May 1st**.
