--- a/assignments/final-project.Rmd
+++ b/assignments/final-project.Rmd
@@ -4,7 +4,7 @@ output: github_document
 
 # Final project
 
-The purpose of the final project is to apply principles of visual design and technical skills rendering graphics in R to a topic of your own substantive interests. Student may work individually or in teams of two. Students should identify early in the term a research question or topic of substantive importance to themselves, then use the skills developed in this course to design and present a visualization which explains the results. The form of this deliverable can take any number of forms:
+The purpose of the final project is to apply principles of visual design and technical skills rendering graphics in R to a topic of your own substantive interests. Student may work individually or in teams of up to three. Students should identify early in the term a research question or topic of substantive importance to themselves, then use the skills developed in this course to design and present a visualization which explains the results. The form of this deliverable can take any number of forms:
 
 * A research paper with a substantial visualization component
 * A web site with a substantial (static) visualization component
@@ -42,4 +42,4 @@ The final deliverables include:
 
 ## Getting started
 
-All work will be performed inside a version-controlled GitHub repo. Create your project repo by going [to this link](https://classroom.github.com/a/_mIFYI6x).
+All work will be performed inside a version-controlled GitHub repo. Create your project repo by going [to this link](https://classroom.github.com/g/SH9AMzoC).
