Update instructions for activating Qualtrics account

--- a/assignments/experiment.Rmd
+++ b/assignments/experiment.Rmd
@@ -29,8 +29,8 @@ Researchers at the University of Rochester have developed [an excellent guide](h
 * Setup your [Amazon MTurk account](https://www.mturk.com/mturk/welcome)
 * Setup your [Qualtrics account here](https://sscs.uchicago.edu/page/qualtrics)
     * **DO THIS EARLY**
-    * Make sure to forward the email I sent you from IRB to Social Sciences Computing Services so they will activate your account. You cannot create a Qualtrics survey until this is done.
-    
+    * You need to first create an account on Qualtrics, then email [ssc-server-support@lists.uchicago.edu](mailto:ssc-server-support@lists.uchicago.edu) acknowledging that you are using Qualtrics for the class.
+
 ## Working in a team
 
 You may work with up to two other students in the course if you choose. When you create the repo for the assignment, be sure to create a team so that the other team members have read/write access to the repo.
