--- a/notes/intro-slides.Rmd
+++ b/notes/intro-slides.Rmd
@@ -20,7 +20,7 @@ library(tidyverse)
 
 ## Course website
 
-* [Course website](https://github.com/uc-cfss/dataviz)
+* [Course website](https://github.com/uc-dataviz/course)
 
 ## Course objectives
 
@@ -54,7 +54,7 @@ library(tidyverse)
 * Visualize abstract data of a quantitative form
 * Goals
 
-## Scatterplot matricies
+## Scatterplot matricies {.scrollable}
 
 ![Scatterplot matrix of the `Credit` dataset. Source: *An Introduction to Statistical Learning: With Applications in R*.](images/3.6.png)
 
@@ -100,10 +100,10 @@ library(tidyverse)
 
 ## Informative art
 
+* [Example of informative art](https://youtu.be/LlvUepMa31o?t=8s)
 * Visualizes data in an effort to make visualization ambient or a part of everyday life
 * Aesthetically pleasing
 * Practically not useful
-* [Debussy, Clair de lune (piano music)](https://youtu.be/LlvUepMa31o?t=8s)
 
 ## Dr. John Snow
 
@@ -125,57 +125,3 @@ library(tidyverse)
 * Approximately how many data points are recorded in the visualization?
 * What makes this a good/bad visualization?
 * What story is it conveying?
-
-## Basic data structures
-
-* Data type
-* Dataset type
-
-## Data types
-
-![Source: Visualization Analysis and Design. Tamara Munzner, with illustrations by Eamonn Maguire. A K Peters Visualization Series, CRC Press, 2014.](images/fig2.1a.png)
-
-## Dataset types {.scrollable}
-
-![Source: Visualization Analysis and Design. Tamara Munzner, with illustrations by Eamonn Maguire. A K Peters Visualization Series, CRC Press, 2014.](images/fig2.1b.png)
-
-![Source: Visualization Analysis and Design. Tamara Munzner, with illustrations by Eamonn Maguire. A K Peters Visualization Series, CRC Press, 2014.](images/fig2.1c_alt.png)
-
-## Tables
-
-* Flat table
-    * Each row is an item
-    * Each column is an attribute
-    * Each cell is a value fully specified by the combination of row and column
-* Multidimensional table
-
-## Networks
-
-![A small example network with eight vertices and ten edges. Source: [Wikipedia](https://en.wikipedia.org/wiki/Network_theory)](images/small_network.png)
-
-## Trees
-
-![Organization, mission, and functions manual: Civil Rights Division. Source: [U.S. Department of Justice](https://www.justice.gov/jmd/organization-mission-and-functions-manual-civil-rights-division)](images/crt.gif)
-
-## Fields
-
-![Source: [NASA Earth Observatory](https://earthobservatory.nasa.gov/Features/GISSTemperature//giss_temperature3.php)](images/us_stations_urban_map.gif)
-
-## Geometry
-
-* Shape of items with explicit spatial positions
-* 0D
-* 1D
-* 2D
-* 3D
-* Maps
-
-## Attribute types
-
-![Source: Visualization Analysis and Design. Tamara Munzner, with illustrations by Eamonn Maguire. A K Peters Visualization Series, CRC Press, 2014.](images/fig2.4.png)
-
-## Semantics
-
-* Type vs. semantic
-* Key vs. value
-
