--- a/notes/principles-slides.Rmd
+++ b/notes/principles-slides.Rmd
@@ -40,7 +40,11 @@ theme_set(theme_minimal(base_size = 18))
 
 ## Data types
 
-![Source: Visualization Analysis and Design. Tamara Munzner, with illustrations by Eamonn Maguire. A K Peters Visualization Series, CRC Press, 2014.](images/fig2.1a.png)
+* Attribute
+* Item
+* Link
+* Grid
+* Position
 
 ## Dataset types {.scrollable}
 
@@ -190,6 +194,7 @@ ggplot(mpg, aes(x = displ, y = hwy)) +
 ```{r mpg-3a}
 ggplot(mpg, aes(x = displ, y = hwy, color = class)) +
   geom_point() +
+  scale_color_brewer(type = "qual", palette = "Dark2") +
   labs(title = "mpg")
 ```
 
@@ -206,6 +211,7 @@ ggplot(mpg, aes(x = displ, y = hwy, shape = class)) +
 ```{r mpg-4}
 ggplot(mpg, aes(x = displ, y = hwy, color = class, size = cyl)) +
   geom_point() +
+  scale_color_brewer(type = "qual", palette = "Dark2") +
   labs(title = "mpg")
 ```
 
@@ -222,7 +228,7 @@ ggplot(mpg, aes(x = displ, y = hwy, color = class, size = cyl)) +
 
 ## Basic charts
 
-* What is the purpose?
+* [What is the purpose?](https://datavizcatalogue.com/)
 * Comparisons
 * Proportions
 * Relationships
@@ -286,6 +292,7 @@ ggplot(infant, aes(mortal)) +
   geom_density(aes(color = "Rectangular"), kernel = "rectangular") +
   geom_density(aes(color = "Triangular"), kernel = "triangular") +
   geom_density(aes(color = "Biweight"), kernel = "biweight") +
+  scale_color_brewer(type = "qual", palette = "Dark2") +
   labs(title = "Density estimators of infant mortality rate for 195 nations",
        x = "Infant mortality rate (per 1,000)",
        y = "Density",
@@ -341,6 +348,7 @@ ggplot(diamonds, aes(fct_rev(cut))) +
 ```{r bar-group}
 ggplot(diamonds, aes(cut, fill = color)) +
   geom_bar(position = "dodge") +
+  scale_fill_brewer(type = "qual", palette = "Dark2") +
   labs(title = "Diamonds data",
        x = "Cut of diamond",
        y = "Frequency count",
@@ -358,6 +366,7 @@ ggplot(diamonds, aes(cut, carat)) +
 
 ggplot(diamonds, aes(carat, fill = cut)) +
   geom_histogram(alpha = .5, position = "identity") +
+  scale_fill_brewer(type = "qual", palette = "Dark2") +
   labs(title = "Diamonds data",
        x = "Carat size",
        y = "Frequency count",
@@ -365,6 +374,7 @@ ggplot(diamonds, aes(carat, fill = cut)) +
 
 ggplot(diamonds, aes(carat, color = cut)) +
   geom_density() +
+  scale_color_brewer(type = "qual", palette = "Dark2") +
   labs(title = "Diamonds data",
        x = "Carat size",
        y = "Frequency count",
@@ -469,6 +479,7 @@ gapminder %>%
   summarize(lifeExp = mean(lifeExp, na.rm = TRUE)) %>%
   ggplot(aes(year, lifeExp, color = continent)) +
   geom_line() +
+  scale_color_brewer(type = "qual", palette = "Dark2") +
   labs(title = "Gapminder quality of life measures",
        subtitle = "By continent",
        x = "Year",
@@ -575,6 +586,7 @@ ggplot(flights, aes(weekday, week_month, fill = value)) +
 ```{r stack-bar}
 ggplot(diamonds, aes(cut, fill = color)) +
   geom_bar() +
+  scale_fill_brewer(type = "qual", palette = "Dark2") +
   labs(title = "Diamonds data",
        subtitle = "Stacked bar chart",
        x = "Cut of diamond",
@@ -583,6 +595,7 @@ ggplot(diamonds, aes(cut, fill = color)) +
 
 ggplot(diamonds, aes(cut, fill = color)) +
   geom_bar(position = "fill") +
+  scale_fill_brewer(type = "qual", palette = "Dark2") +
   scale_y_continuous(labels = scales::percent) +
   labs(title = "Diamonds data",
        subtitle = "Proportional bar chart",
